--- a/BoardRooms/Base.lproj/Main.storyboard
+++ b/BoardRooms/Base.lproj/Main.storyboard
@@ -22,7 +22,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="FkQ-2E-MtV">
-                                <rect key="frame" x="25" y="133" width="311.33333333333331" height="76.666666666666671"/>
+                                <rect key="frame" x="25" y="133" width="311.33333333333331" height="76.666666666666686"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome back! Glad " lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="63g-gZ-rbg">
                                         <rect key="frame" x="0.0" y="0.0" width="311.33333333333331" height="38.333333333333336"/>
@@ -196,7 +196,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="DiZ-2d-dmC">
-                                <rect key="frame" x="16" y="439" width="343" height="109"/>
+                                <rect key="frame" x="16" y="439" width="361" height="109"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <string key="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type.</string>
@@ -208,11 +208,11 @@
                                 </userDefinedRuntimeAttributes>
                             </textView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="5RL-sk-jp2">
-                                <rect key="frame" x="16" y="658" width="240" height="52"/>
+                                <rect key="frame" x="16" y="658" width="361" height="52"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="backgroundColor" red="0.95294117649999999" green="0.95294117649999999" blue="0.95294117649999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="OjS-jT-v8t">
-                                    <size key="itemSize" width="43" height="52"/>
+                                    <size key="itemSize" width="35" height="52"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -225,20 +225,20 @@
                                             <rect key="frame" x="0.0" y="0.0" width="35" height="52"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="6if-7V-rtV">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="6if-7V-rtV" userLabel="circleImageView">
                                                     <rect key="frame" x="0.0" y="16" width="35" height="35"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <color key="tintColor" red="0.58823529409999997" green="0.58823529409999997" blue="0.58823529409999997" alpha="1" colorSpace="calibratedRGB"/>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="16" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gmf-22-uoP">
-                                                    <rect key="frame" x="9" y="27" width="17" height="13"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="16" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gmf-22-uoP" userLabel="dateLabel">
+                                                    <rect key="frame" x="8" y="27" width="20" height="13"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                     <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Thu" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8lt-su-VgA">
-                                                    <rect key="frame" x="7" y="3" width="21" height="14"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Thu" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8lt-su-VgA" userLabel="dayLabel">
+                                                    <rect key="frame" x="0.0" y="3" width="35" height="14"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                                     <color key="textColor" red="0.58823529409999997" green="0.58823529409999997" blue="0.58823529409999997" alpha="1" colorSpace="calibratedRGB"/>
@@ -248,9 +248,9 @@
                                         </collectionViewCellContentView>
                                         <size key="customSize" width="35" height="52"/>
                                         <connections>
-                                            <outlet property="imgBookingCircle" destination="6if-7V-rtV" id="h4H-1N-Ql9"/>
-                                            <outlet property="lblBookingDate" destination="Gmf-22-uoP" id="mIt-IX-s3Z"/>
-                                            <outlet property="lblBookingDay" destination="8lt-su-VgA" id="JG0-Gx-JB3"/>
+                                            <outlet property="circleImageView" destination="6if-7V-rtV" id="0LU-zp-9B0"/>
+                                            <outlet property="dateLabel" destination="Gmf-22-uoP" id="9re-Pw-qxl"/>
+                                            <outlet property="dayLabel" destination="8lt-su-VgA" id="pAV-eg-inB"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -285,6 +285,9 @@
                                     <fontDescription key="titleFontDescription" type="system" weight="semibold" pointSize="16"/>
                                     <color key="baseBackgroundColor" red="0.83137255909999996" green="0.3686274886" blue="0.2235293984" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </buttonConfiguration>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="layer.cornerRadius" value="10"/>
+                                </userDefinedRuntimeAttributes>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="rWK-GG-0Xb"/>
@@ -292,6 +295,11 @@
                     </view>
                     <connections>
                         <outlet property="CollectionView" destination="5RL-sk-jp2" id="4mZ-v3-7b4"/>
+                        <outlet property="descriptionLabel" destination="DiZ-2d-dmC" id="T8R-kG-zZp"/>
+                        <outlet property="facilitiesListLabel" destination="kZx-48-qLy" id="YEs-LQ-YFs"/>
+                        <outlet property="floorNumLabel" destination="QPB-Gn-zwI" id="sx8-ec-WaI"/>
+                        <outlet property="imageView" destination="fJc-2r-HlN" id="dMl-Xo-Gev"/>
+                        <outlet property="numOfSeatsLabel" destination="MS3-1P-rKs" id="Ds0-VJ-vl2"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GSG-vP-ZAl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
